[package]
name = "trajedy"
version = "0.2.7"
authors = ["Malcolm Ramsay <malramsay64@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "gsd",
]

[dependencies]
gsd = {path="gsd", version="0.2.0"}
rstar = {version="0.7.0", features=["serde"]}
nalgebra = "~0.19.0"
structopt = {version="0.3", features=["paw"]}
paw = "~1.0.0"
anyhow = "1.0"
streaming-stats = "0.2.3"
itertools="~0.8.0"
serde = {version="~1.0.98", features=["derive"]}
csv = "~1.1.1"
indicatif = "~0.13.0"
rayon = "1.3.0"
voronoi = { git="https://github.com/malramsay64/rust_voronoi" }
num-traits = "0.2.8"
alga = "0.9.2"

[lib]
bench = false

[[bin]]
name = "trajedy"
path = "src/main.rs"
bench = false

[dev-dependencies]
proptest = "*"
approx = "*"
criterion = "0.3.0"

[[bench]]
name = "analysis"
harness = false

[[bench]]
name = "gsd_iter"
harness = false

[[bench]]
name = "distance"
harness = false
